extend groups with name, add serialnumber to it
